WIP: Setup PostgreSQL and verified app is running

--- a/cartcraft-backend/src/main/resources/application.yml
+++ b/cartcraft-backend/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:postgresql://localhost:5432/cartcraft_db
+    url: jdbc:postgresql://localhost:5433/cartcraftdb
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -18,6 +18,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 logging:
