Added automatic timestamp handling in User entity using @PrePersist and @PreUpdate. Ensured createdAt is set only once and cannot be updated, while updatedAt changes on every update. Refactored service layer to remove manual timestamp handling.

--- a/cartcraft-backend/src/main/resources/application.yml
+++ b/cartcraft-backend/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
@@ -18,10 +18,12 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 logging:
   level:
     org.springframework: INFO
     com.cartcraft: DEBUG
+    org.hibernate.SQL: DEBUG                # Show SQL queries
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE  # Show query parameter bindings
+
