--- a/cartcraft-backend/src/main/resources/application.yml
+++ b/cartcraft-backend/src/main/resources/application.yml
@@ -1,11 +1,31 @@
+# ###############################################
+# DEFAULT PROFILE (applies to all profiles)
+# ###############################################
 server:
   port: 8081
 
 spring:
   application:
     name: cartcraft
-  profiles:
-    active: dev
+
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  # Remove the main 'active' profile from here, as it's set in IntelliJ
+
+# Use three hyphens to start a new, profile-specific configuration
+---
+
+# ###############################################
+# DEVELOPMENT PROFILE
+# ###############################################
+spring:
+  config:
+    activate:
+      on-profile: "dev" # This block is now only active for the 'dev' profile
   datasource:
     url: jdbc:postgresql://localhost:5433/cartcraftdb
     username: ${DB_USERNAME}
@@ -14,15 +34,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 logging:
   level:
     org.springframework: INFO
     com.cartcraft: DEBUG
-    org.hibernate.SQL: DEBUG                # Show SQL queries
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE  # Show query parameter bindings
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
